# locallytrivial.github.io

./: .gitignore  .gitmodules  404.html  CNAME  README.md  about.html  index.html  index.json  index.xml  listings.json  notes.html  notes.xml  pyproject.toml  research.html  robots.txt  search.json  sitemap.xml  tools.html
.github/: pull_request_template.md
.github/workflows/: gh-pages.yml
_old_locallytrivial/: config.toml
_old_locallytrivial/content/: texts-physics.md
about/: index.html
categories/: index.html  index.xml
categories/books/: index.html  index.xml
categories/code/: index.html  index.xml
categories/math/: index.html  index.xml
categories/misc/: index.html  index.xml
categories/physics/: index.html  index.xml
categories/sample-category/: index.html  index.xml
css/: home.min.css  style.min.css  style.min.css.map
js/: theme.min.js
locallytrivial/: _quarto.yml  about.qmd  aps-sort-recent.csl  config.toml  index.qmd  kennington.bib  notes.qmd  references.bib  research.qmd  styles.css  tools.qmd
locallytrivial/content/: about.md  (+5 more)
offline/: index.html
posts/: 20190628-book-review-jeevanjee.html  20200315-algebra-ladder.html  20210919-recent-finds.html  20220922-paper-manifold.html  20240304-ssh-namespacing.html  20240518-classifying.html  20241101-app-dsp-filter.html  20241216-paper-ssmbank.html  20250120-sxolar.html  20260311-paper-gtsp-c0.html  index.html  index.xml
resources/: index.html
series/: index.html  index.xml
tags/: index.html  index.xml
texts-math/: index.html
texts-physics/: index.html
tools/: index.html
(+157 files in other folders)
